--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.10.5",
+    "@sanity/image-url": "^0.140.22",
     "bootstrap": "^4.6.0",
+    "highlight.js": "^11.0.1",
+    "moment": "^2.29.1",
     "next": "10.2.3",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "17.0.2",
-    "sass": "^1.34.1"
+    "react-toggle": "^4.1.2",
+    "sass": "^1.34.1",
+    "swr": "^0.5.6"
   }
 }
